tests/baselines/reference/typeParameterArgumentEquivalence4.errors.txt
==== tests/cases/compiler/typeParameterArgumentEquivalence4.ts (2 errors) ====
    function foo<T,U>() {
        var x: (item) => U;
        var y: (item) => T;
        x = y;  // Should be an error
        ~
!!! typeParameterArgumentEquivalence4.ts(4,5): error TS2012: Cannot convert '(item: any) => T' to '(item: any) => U':
!!! 	Call signatures of types '(item: any) => T' and '(item: any) => U' are incompatible.
        y = x;  // Shound be an error
        ~
!!! typeParameterArgumentEquivalence4.ts(5,5): error TS2012: Cannot convert '(item: any) => U' to '(item: any) => T':
!!! 	Call signatures of types '(item: any) => U' and '(item: any) => T' are incompatible.
    }
    